--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   },
   "dependencies": {
     "@faker-js/faker": "^9.6.0",
+    "@hookform/resolvers": "^4.1.3",
+    "@icons-pack/react-simple-icons": "^12.3.0",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
@@ -32,6 +36,7 @@
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.55.0",
     "sanitize-html": "^2.15.0",
     "slugify": "^1.6.6",
     "sonner": "^2.0.1",
