--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "csv": "^6.3.11",
     "debounce": "^2.2.0",
     "framer-motion": "^12.5.0",
+    "fslightbox-react": "^1.8.0",
     "html-react-parser": "^5.2.2",
     "ky": "^1.7.5",
     "lucide-react": "^0.483.0",
@@ -40,6 +41,7 @@
     "sanitize-html": "^2.15.0",
     "slugify": "^1.6.6",
     "sonner": "^2.0.1",
+    "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
     "unlazy": "^0.12.3",
@@ -48,6 +50,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/fslightbox-react": "^1.8.0",
     "@types/node": "^22.13.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
