--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@prisma/client": "^6.5.0",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.6",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tinymce/tinymce-react": "^6.0.0",
     "@upstash/ratelimit": "^2.0.5",
@@ -24,6 +26,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv": "^6.3.11",
+    "date-fns": "^4.1.0",
     "debounce": "^2.2.0",
     "framer-motion": "^12.5.0",
     "fslightbox-react": "^1.8.0",
