--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.38.0",
+    "@auth/prisma-adapter": "^2.8.0",
     "@faker-js/faker": "^9.6.0",
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.5.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
@@ -23,6 +27,7 @@
     "@tinymce/tinymce-react": "^6.0.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "csv": "^6.3.11",
@@ -34,6 +39,7 @@
     "ky": "^1.7.5",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
+    "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.15",
     "nuqs": "^2.4.1",
