--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,10 @@
     ],
     "paths": {
       "@/*": ["./src/*"],
-      "@/env": ["./env.mjs"]
+      "@/env": ["./env.mjs"],
+      "@/auth": ["./auth"],
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "next-auth.d.ts"],
   "exclude": ["node_modules"]
 }
