--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@react-email/components": "^0.0.35",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tinymce/tinymce-react": "^6.0.0",
     "@upstash/ratelimit": "^2.0.5",
@@ -46,7 +47,9 @@
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^4.0.3",
     "react-hook-form": "^7.55.0",
+    "resend": "^4.2.0",
     "sanitize-html": "^2.15.0",
     "slugify": "^1.6.6",
     "sonner": "^2.0.1",
