--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "html-react-parser": "^5.2.2",
     "ky": "^1.7.5",
     "lucide-react": "^0.483.0",
-    "next": "15.2.3",
+    "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.15",
