Add recharts package

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^19.0.0",
     "react-email": "^4.0.3",
     "react-hook-form": "^7.55.0",
+    "recharts": "^2.15.2",
     "resend": "^4.2.0",
     "sanitize-html": "^2.15.0",
     "slugify": "^1.6.6",
