--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.7",
     "@auth/core": "^0.38.0",
     "@auth/prisma-adapter": "^2.8.0",
     "@faker-js/faker": "^9.6.0",
@@ -20,6 +21,7 @@
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
@@ -28,6 +30,7 @@
     "@tinymce/tinymce-react": "^6.0.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
+    "ai": "^4.3.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,7 +62,8 @@
     "tw-animate-css": "^1.2.4",
     "unlazy": "^0.12.3",
     "uuid": "^11.1.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zod-form-data": "^2.0.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
