--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ai-sdk/openai": "^1.3.7",
     "@auth/core": "^0.38.0",
     "@auth/prisma-adapter": "^2.8.0",
+    "@aws-sdk/client-s3": "^3.782.0",
     "@faker-js/faker": "^9.6.0",
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
@@ -31,6 +32,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
     "ai": "^4.3.2",
+    "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,6 +44,7 @@
     "html-react-parser": "^5.2.2",
     "ky": "^1.7.5",
     "lucide-react": "^0.483.0",
+    "mime-types": "^3.0.1",
     "next": "^15.2.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
@@ -70,6 +73,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/fslightbox-react": "^1.8.0",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^22.13.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
