--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@auth/prisma-adapter": "^2.8.0",
     "@aws-sdk/client-s3": "^3.782.0",
     "@faker-js/faker": "^9.6.0",
+    "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
