--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@upstash/redis": "^1.34.6",
     "ai": "^4.3.2",
     "aws-sdk": "^2.1692.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250405",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -46,7 +47,7 @@
     "ky": "^1.7.5",
     "lucide-react": "^0.483.0",
     "mime-types": "^3.0.1",
-    "next": "^15.2.4",
+    "next": "^15.3.1-canary.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.15",
@@ -57,6 +58,7 @@
     "react-dom": "^19.0.0",
     "react-email": "^4.0.3",
     "react-hook-form": "^7.55.0",
+    "react-number-format": "^5.4.3",
     "recharts": "^2.15.2",
     "resend": "^4.2.0",
     "sanitize-html": "^2.15.0",
