--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@auth/core": "^0.38.0",
     "@auth/prisma-adapter": "^2.8.0",
     "@aws-sdk/client-s3": "^3.782.0",
+    "@aws-sdk/s3-request-presigner": "^3.787.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
     "@faker-js/faker": "^9.6.0",
     "@google/generative-ai": "^0.24.0",
     "@hookform/resolvers": "^4.1.3",
@@ -29,7 +32,8 @@
     "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.35",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tinymce/tinymce-react": "^6.0.0",
+    "@tinymce/tinymce-react": "^6.1.0",
+    "@types/lodash.orderby": "^4.6.9",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
     "ai": "^4.3.2",
@@ -45,6 +49,7 @@
     "fslightbox-react": "^1.8.0",
     "html-react-parser": "^5.2.2",
     "ky": "^1.7.5",
+    "lodash.orderby": "^4.6.0",
     "lucide-react": "^0.483.0",
     "mime-types": "^3.0.1",
     "next": "^15.3.1-canary.4",
