--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.35",
     "@t3-oss/env-nextjs": "^0.12.0",
@@ -64,6 +64,7 @@
     "react-email": "^4.0.3",
     "react-hook-form": "^7.55.0",
     "react-number-format": "^5.4.3",
+    "react-tooltip": "^5.28.1",
     "recharts": "^2.15.2",
     "resend": "^4.2.0",
     "sanitize-html": "^2.15.0",
