--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "lucide-react": "^0.483.0",
     "mime-types": "^3.0.1",
     "next": "^15.3.1-canary.4",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^4.22.1",
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.15",
     "nuqs": "^2.4.1",
