--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "critters": "^0.0.25",
     "csv": "^6.3.11",
     "date-fns": "^4.1.0",
     "debounce": "^2.2.0",
