--- a/package.json
+++ b/package.json
@@ -17,21 +17,31 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@faker-js/faker": "^9.6.0",
     "@google/generative-ai": "^0.24.0",
+    "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@prisma/client": "^6.5.0",
     "@prisma/extension-accelerate": "^1.3.0",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-toast": "^1.2.6",
     "@react-email/components": "^0.0.41",
+    "@react-three/drei": "^10.1.2",
+    "@react-three/fiber": "^9.1.2",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tinymce/tinymce-react": "^6.1.0",
     "@types/lodash.orderby": "^4.6.9",
+    "@types/three": "^0.177.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
     "ai": "^4.3.2",
@@ -46,9 +56,11 @@
     "debounce": "^2.2.0",
     "framer-motion": "^12.5.0",
     "fslightbox-react": "^1.8.0",
+    "gsap": "^3.13.0",
     "html-react-parser": "^5.2.2",
     "ky": "^1.7.5",
     "lodash.orderby": "^4.6.0",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.483.0",
     "mime-types": "^3.0.1",
     "next": "^15.3.1-canary.4",
@@ -56,12 +68,14 @@
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.8.15",
     "nuqs": "^2.4.1",
+    "prettier": "3.4.2",
     "pretty-bytes": "^6.1.1",
     "prisma": "^6.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.0.3",
     "react-hook-form": "^7.55.0",
+    "react-intersection-observer": "^9.16.0",
     "react-number-format": "^5.4.3",
     "react-tooltip": "^5.28.1",
     "recharts": "^2.15.2",
@@ -71,6 +85,7 @@
     "sonner": "^2.0.1",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.0.2",
+    "three": "^0.177.0",
     "thumbhash": "^0.1.1",
     "tw-animate-css": "^1.2.4",
     "unlazy": "^0.12.3",
