--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -70,7 +70,7 @@
     "nuqs": "^2.4.1",
     "prettier": "3.4.2",
     "pretty-bytes": "^6.1.1",
-    "prisma": "^6.5.0",
+    "prisma": "^6.9.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email": "^4.0.3",
@@ -81,6 +81,7 @@
     "recharts": "^2.15.2",
     "resend": "^4.2.0",
     "sanitize-html": "^2.15.0",
+    "sharp": "^0.34.2",
     "slugify": "^1.6.6",
     "sonner": "^2.0.1",
     "swiper": "^11.2.6",
@@ -96,7 +97,7 @@
   "devDependencies": {
     "@types/fslightbox-react": "^1.8.0",
     "@types/mime-types": "^2.1.4",
-    "@types/node": "^22.13.11",
+    "@types/node": "^22.15.30",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sanitize-html": "^2.13.0",
