--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@google/generative-ai": "^0.24.0",
     "@gsap/react": "^2.1.2",
     "@hookform/resolvers": "^4.1.3",
+    "@huggingface/inference": "^4.13.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^1.3.0",
@@ -48,6 +49,7 @@
     "aws-sdk": "^2.1692.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250405",
     "bcryptjs": "^3.0.2",
+    "caniuse-lite": "^1.0.30001756",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "critters": "^0.0.25",
@@ -56,6 +58,7 @@
     "debounce": "^2.2.0",
     "framer-motion": "^12.5.0",
     "fslightbox-react": "^1.8.0",
+    "groq-sdk": "^0.36.0",
     "gsap": "^3.13.0",
     "html-react-parser": "^5.2.2",
     "ky": "^1.7.5",
