--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/openai": "^1.3.7",
+    "@ai-sdk/rsc": "^1.0.118",
     "@auth/prisma-adapter": "^2.8.0",
     "@aws-sdk/client-s3": "^3.782.0",
     "@aws-sdk/s3-request-presigner": "^3.787.0",
@@ -45,7 +46,7 @@
     "@types/three": "^0.177.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
-    "ai": "^4.3.2",
+    "ai": "^5.0.116",
     "aws-sdk": "^2.1692.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250405",
     "bcryptjs": "^3.0.2",
@@ -74,8 +75,8 @@
     "prettier": "3.4.2",
     "pretty-bytes": "^6.1.1",
     "prisma": "^6.9.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-email": "^4.0.3",
     "react-hook-form": "^7.55.0",
     "react-intersection-observer": "^9.16.0",
