--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/groq": "^3.0.2",
     "@ai-sdk/openai": "^1.3.7",
-    "@ai-sdk/rsc": "^1.0.118",
+    "@ai-sdk/rsc": "^2.0.5",
     "@auth/prisma-adapter": "^2.8.0",
     "@aws-sdk/client-s3": "^3.782.0",
     "@aws-sdk/s3-request-presigner": "^3.787.0",
@@ -46,7 +47,7 @@
     "@types/three": "^0.177.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.6",
-    "ai": "^5.0.116",
+    "ai": "^6.0.5",
     "aws-sdk": "^2.1692.0",
     "babel-plugin-react-compiler": "^19.0.0-beta-e993439-20250405",
     "bcryptjs": "^3.0.2",
